syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";

// 使用 protoc 编译时
import "trip.proto";
import "profile.proto";

// TripService
message CreateTripRequest {
  Location start = 1;
  string car_id = 2;
  string avatar_url = 3;
}

message GetTripsRequest {
  repeated string id_list = 1;
}

message GetTripsResponse {
  repeated TripEntity trips = 1;
}

message UpdateTripRequest {
  string id = 1;
  Location current = 2;
  bool end_trip = 3;
}

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (TripEntity);
  rpc GetTrips(GetTripsRequest) returns (GetTripsResponse);
  rpc UpdateTrip(UpdateTripRequest) returns (Trip);
}

// ProfileService
message GetProfileRequest{}
message ClearProfileRequest{}

message GetProfilePhotoRequest {}
message GetProfilePhotoResponse {
    string url = 1;
}
message CreateProfilePhotoRequest {}
message CreateProfilePhotoResponse {
    string upload_url = 1;
}
message VerifyProfilePhotoRequest {}
message ClearProfilePhotoRequest {}
message ClearProfilePhotoResponse {}

service ProfileService {
  rpc GetProfile(GetProfileRequest) returns (Profile);
  rpc SubmitProfile(Identity) returns (Profile);
  rpc ClearProfile(ClearProfileRequest) returns (Profile);

  rpc CreateProfilePhoto (CreateProfilePhotoRequest) returns (CreateProfilePhotoResponse);
  rpc GetProfilePhoto (GetProfilePhotoRequest) returns (GetProfilePhotoResponse);
  rpc VerifyProfilePhoto (VerifyProfilePhotoRequest) returns (Identity);
  rpc ClearProfilePhoto (ClearProfilePhotoRequest) returns (ClearProfilePhotoResponse);
}
